# ChangeLog for dev-db/drizzle
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.11 2010/05/21 20:57:54 flameeyes Exp $

  21 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  drizzle-2010.04.1513.ebuild, drizzle-2010.05.1525.ebuild:
  Fix cvs headers.

*drizzle-2010.05.1525 (21 May 2010)
*drizzle-2010.04.1513 (21 May 2010)

  21 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +drizzle-2010.04.1513.ebuild, +drizzle-2010.05.1525.ebuild:
  Version bump, both 2010.04 and 2010.05.

  17 Apr 2010; Robin H. Johnson <robbat2@gentoo.org>
  drizzle-2010.03.1412.ebuild, +files/drizzle-2010.03.1412-ggdb3-fix.patch:
  Tweak the ebuild per suggestions by Monty Taylor of upstream, during the
  Drizzle Developer day following MySQL UC 2010. Patch to disable -ggdb3
  being forced as well.

*drizzle-2010.03.1412 (01 Apr 2010)

  01 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +drizzle-2010.03.1412.ebuild, metadata.xml:
  Version bump, new version solves the PAM problem (the pam.d file is set up
  properly) and simplifies the curl/gnutls/openssl dependency web as the MD5
  plugin is now using libgcrypt.

*drizzle-2010.03.1347 (19 Mar 2010)

  19 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -drizzle-2010.01.1273.ebuild, -drizzle-2010.03.1317.ebuild,
  +drizzle-2010.03.1347.ebuild:
  Version bump, remove old versions, fix the curl dependencies (bug
  #310141).

  18 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  drizzle-2010.03.1317.ebuild:
  Fix header.

*drizzle-2010.03.1317 (18 Mar 2010)

  18 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +drizzle-2010.03.1317.ebuild, +files/drizzle.conf.d,
  +files/drizzle.init.d:
  Version bump from Pavel, this time with an init script that can start
  drizzled.

  19 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/drizzle-2009.12.1240-asneeded.patch, -drizzle-2009.12.1251.ebuild,