@@ -12,13 +12,13 @@ DIST drizzle-2010.05.1525.tar.gz 7773814 RMD160 8dc2bd87075391f64b8828c143d4b16d
 EBUILD drizzle-2010.03.1347.ebuild 4549 RMD160 da52788744b9be7c8ecc7e800aa38888450eba20 SHA1 e58b13de9d87f3cc3f5b6afe24f1d171456f0317 SHA256 ea5984c18ef4e23413dea24e30f0617e8342a61a8b08f3f011e2c6b0f4f10d4f
 EBUILD drizzle-2010.03.1412.ebuild 3739 RMD160 ebfcca997d75372422bcb823c35bf1d996853cae SHA1 917b632567362a86d74f728b9b30cdd59c29d3c1 SHA256 618366427791a0186c0a101c754fbda34c167255faca0f08c537188322ab0085
 EBUILD drizzle-2010.04.1513.ebuild 3913 RMD160 23636497f63f3348977845bbe4694ac1755e1ec7 SHA1 8875fdfe2df5e41587a64be572d7bcad233433be SHA256 5a8123437ae79f677e55ed14594af7676ca717e3456b24c8e128602755d00481
-EBUILD drizzle-2010.05.1525.ebuild 3989 RMD160 861296640d722dd9ededc07053cf47014a3c4358 SHA1 385c2e90c907439e459891876e99489a06b41e3c SHA256 9a719548e5935550314909b7971bdc5ea6acca09223b94494c678201eb0282ed
-MISC ChangeLog 2837 RMD160 59b430575162ff36f9555631c9828a7d618c580a SHA1 371dc3e27c14dbd130bc7bee7f58cf5df9f95b9a SHA256 5b6f8701a110517ebc3e25be27bd5d7509c9f7175011b1964b1a8e18fa05d6c1
+EBUILD drizzle-2010.05.1525.ebuild 3846 RMD160 e24f3c8a676d6298db0f40209528bcad9a2536fb SHA1 73c437694da09a17c48ca826da71482188c302b5 SHA256 58c1c2cda86fcfeed51d826b2d8d88231d85526d77975aceca4ed46329520dc2
+MISC ChangeLog 3041 RMD160 72868930bc5ebe188f3f44456508b6e9fad36eaa SHA1 45e6d0fb59620ae08c13550d2f7b235e18ce6b5c SHA256 12d1ddaa7fc9df29a4753312e3533353526be374aa825fb6545893ab5599d9f6
 MISC metadata.xml 2823 RMD160 4d8ec16d5d512d4325305133578c2f0396200485 SHA1 2612ed473de2c4c0d6e912bdb1cc4303429a8b12 SHA256 37f8608359cbaea4b9a3f4ba0f5e71fa83f8236303584d5ca6458f5ed7fc8857
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkv286wACgkQAiZjviIA2Xh3twCgpR9cyqZ2/XSfN6pC3A0wz0+u
-G+sAoNBCOrk+aQzI3a0nEUjrUMsh1JFK
-=AXJl
+iEYEARECAAYFAkv28/sACgkQAiZjviIA2XgrUgCfcCLgBBX+AnIxWMd/sG+32s2s
+ff0AniOaF7c/jdhwu89UM6JGOb+/6Nw9
+=U4EH
 -----END PGP SIGNATURE-----
