@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/drizzle
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.11 2010/05/21 20:57:54 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.12 2010/05/21 20:59:14 flameeyes Exp $
+
+  21 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  drizzle-2010.05.1525.ebuild:
+  Disable again the --with-debug option at ./configure; debug CFLAGS are
+  *not something for the ebuild to tweak*.
 
   21 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   drizzle-2010.04.1513.ebuild, drizzle-2010.05.1525.ebuild:
